--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap');
 .alert p {
   margin-bottom: 0!important;
 }
 body {
-  background: #000428;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #004e92, #000428);  
-  background: linear-gradient(to right, #004e92, #000428); 
+  background:black;
+  /*background: rgb(107, 245, 137); 
+  font-family: 'Bree Serif', serif;*/
   margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+  padding: 0; 
+ 
+
 }
 header {
   margin: 30px 0;
@@ -16,7 +18,7 @@ header {
   padding:20px;
 }
 .contenido-principal {
-  background-color: white;
+  
   padding: 30px;
   border-radius: 20px;
 }
@@ -30,10 +32,10 @@ header {
 #gastos {
   margin-bottom: 30px;
 }
+/*
 h1 {
-  font-family: 'Raleway', sans-serif;
   font-weight: 100;
-  color: white;
+  color: rgb(48, 179, 240);
   text-align: center;
   font-size: 4.8rem!important;
 }
@@ -44,7 +46,7 @@ h2 {
   margin-bottom:30px;
   font-size:3rem!important;
   text-align: center;
-}
+}*/
 .campo {
   margin-bottom: 2rem;
 }
