--- a/src/css/presupuesto.css
+++ b/src/css/presupuesto.css
@@ -13,5 +13,10 @@ input.button{
 input.button:hover{
 background-color: #FEFC21;
     border:  none;
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+@media screen and (min-width: 900px) {
+    input.button:hover{
+        
+            box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+        }
 }
